implementação de herança, sobrescrita e sobrecarga no sistema de streaming